# tstest

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
LICENSES/: MIT.txt
include/: liblink.h  net_tstamp_cpy.h  pkt.h  stats.h  timestamping.h  tstest.h  version.h.in
scripts/: plot.py  plot.sh  test.sh
src/: check.c  delay.c  extts.c  liblink.c  pkt.c  ptp_message.c  stats.c  tc.c  timestamping.c  tstest.c
test/: fake_tc.py  test.sh
